# Cortex-CLI

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
agents/: base_agent.py  finance_agent.py  legal_agent.py  marketing_agent.py  operations_agent.py  research_agent.py
cli/: __init__.py  commands.py  dashboard.py  display.py  main.py
config/: agents.yaml
core/: orchestrator.py  task_router.py  workflow_engine.py
memory/: __init__.py  history_store.py  knowledge_store.py  memory_manager.py  vector_store.py
models/: anthropic_model.py  groq_model.py  model_router.py  ollama_model.py  openai_model.py
skills/: base_skill.py
skills/code_executor/: config.yaml  skill.py
skills/file_reader/: config.yaml  skill.py
skills/spreadsheet_analyzer/: config.yaml  skill.py
skills/web_search/: config.yaml  skill.py
tests/: test_agents.py  test_memory.py  test_workflows.py
workflows/: financial_analysis.yaml  marketing_campaign.yaml  product_launch.yaml
