[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-ai"
version = "0.1.0"
description = "Local-first AI Operating System for companies"
authors = [{ name = "Nithin Varma" }]
requires-python = ">=3.11"

[project.scripts]
cortex = "cli.main:app"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
